# db2-sqlglot-plugin

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  demo_db2_sqlglot.py  dev-requirements.txt  notices.txt  pyproject.toml  requirements.txt
.github/workflows/: build_release.yaml  release.yml  scans.yml  test.yml  unit-tests.yml
db2_sqlglot/: __init__.py  dialect.py  generator.py  parser.py
tests/: README_IBIS_TESTS.md  __init__.py  test_db2_dialect.py  test_ibis_db2.py
