[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db2-sqlglot-dialect"
version = "1.1.0"
description = "Db2 dialect plugin for SQLGlot"
authors = [
    {name = "Shubham Kapoor", email = "shubham.kapoor992@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlglot>=30.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.entry-points."sqlglot.dialects"]
db2 = "db2_sqlglot.dialect:Db2"

[project.urls]
Homepage = "https://github.com/IBM/db2-sqlglot-plugin"
Repository = "https://github.com/IBM/db2-sqlglot-plugin"

# Ruff configuration
[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["db2_sqlglot"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
